# concise

./: .gitignore  LICENSE.md  README.md  dailyRunner.py  env.sh  pyproject.toml
src/: dailyRunner.py
src/concise/: __init__.py  __main__.py  app.css  app.py  concole.py
src/concise/panes/: settings.py
src/concise/utils/: classes.py  types.py  utils.py  widgets.py
src/linux/: Concise.desktop
src/utils/: classes.py
utils/: classes.py  utils.py
