[project]
name = "concise"
version = "0.0.1"
description = "A terminal journal and goal app"
authors = [
    {name = "XotEmBotZ",email = "xotembotzop@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.13,<4.0.0"
dependencies = [
    "psycopg (>=3.2.3,<4.0.0)",
    "pytz (>=2024.2,<2025.0)",
    "textual (>=1.0.0)",
    "toml (>=0.10.2,<0.11.0)",
]


[project.urls]
Homepage = "https://github.com/XotEmBotZ/concise"
Issues = "https://github.com/XotEmBotZ/concise/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry]
# package-mode = false
[tool.poetry.group.dev.dependencies]
textual-dev = "^1.7.0"

